src/snapshots/afrotd__parser__tests__interpretation_html_9.1.6_12.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.6.XII
        </p>
    </div>
    <div class="message-body">
        <p>
            3. und 10 von der A-25. Der linke Tackle A77 hat sich innerhalb der
            Tackle Box aufgestellt. Defender B60 hat sich in der Nähe der
            Scrimmage Line und innerhalb von A77, direkt gegenüber dem linken
            Guard aufgestellt. QB A12 nimmt den Snap an und übergibt den Ball
            an Back A32, der nach rechts advanct. Als B60 bei seinem ersten
            Angriff an der Scrimmage Line die Verfolgung aufnimmt, blockt ihn
            A77 unter der Gürtellinie von der Seite.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Legaler Block von A77. Diese Aktion wird als Teil des ersten
                Angriffs an der Scrimmage Line gewertet. A77 darf legal unter
                der Gürtellinie blocken und der Block muss nicht von vorne
                sein. Es gibt keine Beschränkung der Schrittanzahl, damit eine
                Aktion noch als erster Angriff zählt, die Aktion darf aber
                nicht als zweite Aktion zu werten sein. Nach dem ersten Angriff
                und wenn es deutlich eine zweite Aktion ist, darf A77 in der
                Tackle Box nur dann noch unterhalb der Gürtellinie blocken,
                wenn der Block von vorne ausgeführt wird.
            </p>
        </details>
    </div>
</article>
