src/snapshots/afrotd__parser__tests__interpretation_html_9.1.6_13.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.6.XIII
        </p>
    </div>
    <div class="message-body">
        <p>
            3. und 10 von der A-25. Back A21 steht stationär innerhalb der
            Tackle Box beim Snap. Direkt nach dem Snap läuft A21 nach vorne und
            blockt den blitzenden Linebacker einen Meter jenseits der neutralen
            Zone. Der Block ist unterhalb der Gürtellinie und von vorn.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Legaler Block von A21. Ein Block, der maximal einen Meter
                jenseits der neutralen Zone initiiert wird, wird als Block
                innerhalb der Tackle Box gewertet. Das gilt für Backs und
                Linemen, solange alle anderen Voraussetzungen für einen legalen
                tiefen Block gegeben sind.
            </p>
        </details>
    </div>
</article>
