src/snapshots/afrotd__parser__tests__interpretation_html_9.1.6_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.6.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Back A41 steht beim Snap in einer ausgeglichenen Formation
            unmittelbar hinter dem rechten Tackle. Seine linke Schulter
            befindet sich innerhalb der Tackle Box. Der Quarterback übergibt
            den Ball an Back A22, der gerade nach vorne läuft. A41 blockt B2,
            der seinerseits ins Offense Backfield gestürmt kommt, um A22 zu
            tackeln, als dieser die Scrimmage Line erreicht. A41’s Block ist
            unter der Gürtellinie und deutlich von der Seite.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Illegaler tiefer Block. A41 befand sich beim Snap teilweise in
                der Tackle Box und hinter dem zweiten Lineman, aber der Block
                ist nicht von vorne.
            </p>
        </details>
    </div>
</article>
