src/snapshots/afrotd__parser__tests__interpretation_html_9.1.6_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.6.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            A’s Ball, 3. und 7 von der A-30. Der Ball liegt auf der linken Hash
            Mark. Back A22 hat sich vollständig außerhalb des Körperrahmens des
            linken Tackle aufgestellt. B40 bewegt sich im Defense Backfield in
            Richtung von A22, um ihn zu covern. Der Handoff geht an A44, der
            über die rechte Seite läuft. Als sich das Spielgeschehen
            entwickelt, folgt B40 dem Spielgeschehen und A22 verfolgt ihn. An
            der A-34, jenseits der Hash Mark überholt A22 B40 und blockt ihn
            deutlich unter der Gürtellinie und direkt von vorne. A44 wird an
            der B-45 getackelt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Illegaler tiefer Block. A22 hatte sich beim Snap außerhalb der
                Tackle Box aufgestellt, daher kann A22 nicht legal tief
                blocken.
            </p>
        </details>
    </div>
</article>
