src/snapshots/afrotd__parser__tests__interpretation_html_9.1.6_7.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.6.VII
        </p>
    </div>
    <div class="message-body">
        <p>
            A’s Ball, 1. und 10 von der A-40. A12 nimmt den Snap und läuft auf
            die rechte Seite. Guard A66 kommt von der linken Seite und fungiert
            als Vorblocker für A12. B55 befand sich an der A-43 im Defense
            Backfield und bewegte sich vor dem Snap nach links. Als sich das
            Spielgeschehen entwickelt, blockt Linebacker B55 an der A-39 A66
            von vorne gegen die Oberschenkel. A12 wird an der A-48 aus dem
            Spielfeld gedrängt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Illegaler tiefer Block. B55 hatte sich nicht in einer
                stationären Position innerhalb eines Meters an der Scrimmage
                Line aufgestellt und kann daher nicht legal tief blocken.
            </p>
        </details>
    </div>
</article>
