src/snapshots/afrotd__parser__tests__interpretation_html_9.1.6_8.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.6.VIII
        </p>
    </div>
    <div class="message-body">
        <p>
            Beim Snap hat sich Tight End A85 sechs Meter vom Snapper
            aufgestellt. Bevor der Ball die Tackle Box verlassen hat, blockt
            A85 Tackle B77 von der Seite unter der Gürtellinie.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Illegaler tiefer Block A85 hatte sich beim Snap anfänglich in
                einer Position außerhalb der Tackle Box befunden, daher kann
                A85 nicht legal tief blocken. 15Meterstrafe.
            </p>
        </details>
    </div>
</article>
