src/snapshots/afrotd__parser__tests__interpretation_html_9.1.6_9.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.6.IX
        </p>
    </div>
    <div class="message-body">
        <p>
            1. und 10 von der A-45. Guard A66 befindet sich neben dem Snapper.
            Unmittelbar nach dem Snap blockt A66 (a) Nose Guard B55 an der A-46
            oder (b) Linebacker B33 an der A-48. In beiden Fällen erfolgt der
            Block unter der Gürtellinie an der Seite des Gegners.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) legaler Block. A66 hat die Tackle Box zwar verlassen, aber
                ein Block, der einen Meter jenseits der neutralen Zone
                initiiert wird, wird als Block innerhalb der Tackle Box
                gewertet. (b) Foul, illegaler tiefer Block. In diesem Fall hat
                A66 die Tackle Box verlassen und ist in die zweite Ebene
                gegangen, um den Block auszuführen. Für einen legalen Block
                müsste er über der Gürtellinie angesetzt werden.
            </p>
        </details>
    </div>
</article>
