src/snapshots/afrotd__parser__tests__interpretation_html_9.1.9_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.9.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Nachdem der Ball die Hand von Passer A17 verlassen hat, macht B68
            zwei Schritte und greift A17 an, ohne den Versuch, den Kontakt zu
            vermeiden.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Roughing gegen den Passer. Der Passer ist ein
                verteidigungsloser Spieler, der für Verletzungen anfällig ist
                und entsprechend geschützt werden muss. Nachdem er zwei
                Schritte gemacht hat, müsste B68 aufgefallen sein, dass A17 den
                Ball geworfen hat und in der Lage sein, einen Kontakt zu
                vermeiden.
            </p>
        </details>
    </div>
</article>
